--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -34,6 +34,7 @@
     "twig": "^1.10.5",
     "uuid": "^3.1.0",
     "vue": "^2.5.11",
+    "vue-i18n": "^7.6.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.4.2",
