--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -25,7 +25,7 @@
     "check-dependencies": "./node_modules/.bin/ncu",
     "generate-api-docs": "./node_modules/.bin/jsdoc src -r -c jsdoc.config.js",
     "storybook-watch": "start-storybook -p 9001 -s ./static -c .storybook",
-    "storybook-generate": "build-storybook -s ./static -c .storybook -o ../../../../build/artifacts/storybook"
+    "storybook-generate": "build-storybook -s ./static -c .storybook -o ../../../../../../../build/artifacts/storybook"
   },
   "dependencies": {
     "axios": "^0.18.0",
