--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -36,7 +36,8 @@
     "uuid": "^3.1.0",
     "vue": "^2.5.11",
     "vue-i18n": "^7.6.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "quill": "1.3.6"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.9",
