NEXT-426 Add APP URL to the tests

--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -17,7 +17,7 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test TESTING_ENV=single karma start test/unit/karma.conf.js --single-run",
-    "unit-watch": "cross-env BABEL_ENV=test TESTING_ENV=watch karma start test/unit/karma.conf.js --auto-watch",
+    "unit-watch": "karma start test/unit/karma.conf.js --auto-watch",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
