--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -14,8 +14,8 @@
   ],
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "dev": "node --trace-deprecation build/dev-server.js",
+    "build": "node --trace-deprecation --inspect build/build.js",
     "unit": "cross-env BABEL_ENV=test TESTING_ENV=single karma start test/unit/karma.conf.js --single-run",
     "unit-watch": "cross-env BABEL_ENV=test TESTING_ENV=watch karma start test/unit/karma.conf.js --auto-watch",
     "e2e": "node test/e2e/runner.js",
@@ -30,100 +30,102 @@
   "dependencies": {
     "app-module-path": "^2.2.0",
     "axios": "^0.18.0",
-    "bottlejs": "^1.6.3",
-    "lodash": "^4.17.5",
-    "twig": "^1.10.5",
-    "uuid": "^3.1.0",
-    "vue": "^2.5.11",
-    "vue-i18n": "^7.6.0",
+    "bottlejs": "^1.7.1",
+    "lodash": "^4.17.10",
+    "twig": "^1.12.0",
+    "uuid": "^3.3.2",
+    "vue": "^2.5.17",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
     "quill": "1.3.6"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.9",
-    "@storybook/addon-centered": "^3.3.9",
-    "@storybook/addon-knobs": "^3.3.9",
-    "@storybook/addons": "^3.3.9",
-    "@storybook/vue": "^3.3.8",
-    "ajv": "^6.1.1",
-    "autoprefixer": "^8.0.0",
-    "axios-mock-adapter": "^1.10.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-istanbul": "^4.1.5",
+    "@storybook/addon-actions": "^3.4.8",
+    "@storybook/addon-centered": "^3.4.8",
+    "@storybook/addon-knobs": "^3.4.8",
+    "@storybook/addons": "^3.4.8",
+    "@storybook/vue": "^3.4.8",
+    "ajv": "^6.5.2",
+    "autoprefixer": "^9.0.2",
+    "axios-mock-adapter": "^1.15.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-shallow-deep-equal": "^1.4.6",
-    "chalk": "^2.3.0",
-    "chromedriver": "^2.34.0",
+    "chalk": "^2.4.1",
+    "chromedriver": "^2.41.0",
     "connect-history-api-fallback": "^1.5.0",
-    "copy-webpack-plugin": "^4.3.0",
-    "cross-env": "^5.1.1",
-    "cross-spawn": "^6.0.4",
-    "css-loader": "^0.28.7",
+    "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^5.2.0",
+    "cross-spawn": "^6.0.5",
+    "css-loader": "^1.0.0",
     "docdash": "^0.4.0",
-    "eslint": "^4.13.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^4.0.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-html": "^4.0.5",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-promise": "^3.8.0",
     "eventsource-polyfill": "^0.9.6",
-    "expose-loader": "^0.7.4",
-    "express": "^4.16.2",
+    "expose-loader": "^0.7.5",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "friendly-errors-webpack-plugin": "^1.6.1",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "function-bind": "^1.1.1",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.4",
-    "inject-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.18.0",
+    "inject-loader": "^4.0.1",
     "jsdoc": "^3.5.5",
-    "karma": "^2.0.0",
+    "karma": "^2.0.5",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
+    "karma-coverage": "^1.1.2",
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sinon-chai": "^1.3.3",
+    "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^2.0.9",
-    "launch-editor-middleware": "^2.2.0",
-    "less": "^3.0.1",
-    "less-loader": "^4.0.5",
-    "lolex": "^2.3.1",
+    "karma-webpack": "^3.0.0",
+    "launch-editor-middleware": "^2.2.1",
+    "less": "^3.8.0",
+    "less-loader": "^4.1.0",
+    "lolex": "^2.7.1",
+    "mini-css-extract-plugin": "^0.4.1",
     "mkdirp": "^0.5.1",
-    "mocha": "^5.0.1",
+    "mocha": "^5.2.0",
     "ncu": "^0.2.1",
-    "nightwatch": "^0.9.19",
-    "nsp": "^3.1.0",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.3.0",
-    "prismjs": "^1.11.0",
+    "nightwatch": "^1.0.8",
+    "nsp": "^3.2.1",
+    "opn": "^5.3.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "ora": "^3.0.0",
+    "prismjs": "^1.15.0",
     "rimraf": "^2.6.2",
-    "selenium-server": "^3.8.1",
-    "semver": "^5.4.1",
-    "sinon": "^4.1.3",
-    "sinon-chai": "^2.14.0",
-    "url-loader": "^0.6.2",
-    "vue-loader": "^14.1.1",
-    "vue-style-loader": "^4.0.2",
-    "vue-template-compiler": "^2.5.11",
-    "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-dev-middleware": "^2.0.2",
-    "webpack-hot-middleware": "^2.21.0",
-    "webpack-merge": "^4.1.1"
+    "selenium-server": "^3.13.0",
+    "semver": "^5.5.0",
+    "sinon": "^6.1.4",
+    "sinon-chai": "^3.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "url-loader": "^1.0.1",
+    "vue-loader": "^15.2.6",
+    "vue-style-loader": "^4.1.1",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.16.3",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-merge": "^4.1.4"
   },
   "engines": {
     "node": ">= 4.0.0",
