--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -22,7 +22,6 @@
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "security-check": "./node_modules/.bin/nsp check",
-    "check-dependencies": "./node_modules/.bin/ncu",
     "generate-api-docs": "./node_modules/.bin/jsdoc src -r -c jsdoc.config.js",
     "storybook-watch": "start-storybook -p 9001 -s ./static -c .storybook",
     "storybook-generate": "build-storybook -s ./static -c .storybook -o ../../../../../../../build/artifacts/storybook"
@@ -32,12 +31,12 @@
     "axios": "^0.18.0",
     "bottlejs": "^1.7.1",
     "lodash": "^4.17.10",
+    "quill": "1.3.6",
     "twig": "^1.12.0",
     "uuid": "^3.3.2",
     "vue": "^2.5.17",
     "vue-i18n": "^8.0.0",
-    "vue-router": "^3.0.1",
-    "quill": "1.3.6"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.8",
@@ -104,7 +103,6 @@
     "mini-css-extract-plugin": "^0.4.1",
     "mkdirp": "^0.5.1",
     "mocha": "^5.2.0",
-    "ncu": "^0.2.1",
     "nightwatch": "^1.0.8",
     "nsp": "^3.2.1",
     "opn": "^5.3.0",
