--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -91,7 +91,6 @@
     "karma-coverage": "^1.1.2",
     "karma-junit-reporter": "^1.2.0",
     "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
     "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
@@ -126,12 +125,11 @@
     "webpack-merge": "^4.1.4"
   },
   "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "node": ">= 9.3.0",
+    "npm": ">= 6.0.0"
   },
   "browserslist": [
-    "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "safari >= 7"
   ]
 }
