NEXT-331 Added missing dependency

--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -48,6 +48,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "browserslist": "^4.0.1",
     "chai": "^4.1.2",
     "chai-shallow-deep-equal": "^1.4.6",
     "chalk": "^2.4.1",
