--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -52,7 +52,7 @@
     "chai": "^4.1.2",
     "chai-shallow-deep-equal": "^1.4.6",
     "chalk": "^2.4.1",
-    "chromedriver": "^2.41.0",
+    "chromedriver": "2.41.0",
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
@@ -95,7 +95,7 @@
     "mini-css-extract-plugin": "^0.4.1",
     "mkdirp": "^0.5.1",
     "mocha": "^5.2.0",
-    "nightwatch": "^1.0.8",
+    "nightwatch": "^0.9.21",
     "nsp": "^3.2.1",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
