--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -25,96 +25,96 @@
     "generate-api-docs": "./node_modules/.bin/jsdoc src -r -c jsdoc.config.js"
   },
   "dependencies": {
-    "app-module-path": "^2.2.0",
-    "axios": "^0.18.0",
-    "bottlejs": "^1.7.1",
-    "lodash": "^4.17.10",
+    "app-module-path": "2.2.0",
+    "axios": "0.18.0",
+    "bottlejs": "1.7.1",
+    "lodash": "4.17.10",
     "quill": "1.3.6",
-    "twig": "^1.12.0",
-    "uuid": "^3.3.2",
-    "vue": "^2.5.17",
-    "vue-i18n": "^8.0.0",
-    "vue-router": "^3.0.1"
+    "twig": "1.12.0",
+    "uuid": "3.3.2",
+    "vue": "2.5.17",
+    "vue-i18n": "8.0.0",
+    "vue-router": "3.0.1"
   },
   "devDependencies": {
-    "ajv": "^6.5.2",
-    "autoprefixer": "^9.1.0",
-    "axios-mock-adapter": "^1.15.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-istanbul": "^4.1.6",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "browserslist": "^4.0.1",
-    "chai": "^4.1.2",
-    "chai-shallow-deep-equal": "^1.4.6",
-    "chalk": "^2.4.1",
+    "ajv": "6.5.2",
+    "autoprefixer": "9.1.0",
+    "axios-mock-adapter": "1.15.0",
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.6",
+    "babel-loader": "7.1.5",
+    "babel-plugin-istanbul": "4.1.6",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-register": "6.26.0",
+    "browserslist": "4.0.1",
+    "chai": "4.1.2",
+    "chai-shallow-deep-equal": "1.4.6",
+    "chalk": "2.4.1",
     "chromedriver": "2.41.0",
-    "connect-history-api-fallback": "^1.5.0",
-    "copy-webpack-plugin": "^4.5.2",
-    "cross-env": "^5.2.0",
-    "cross-spawn": "^6.0.5",
-    "css-loader": "^1.0.0",
-    "docdash": "^0.4.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-loader": "^2.1.0",
-    "eslint-plugin-html": "^4.0.5",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-promise": "^3.8.0",
-    "eventsource-polyfill": "^0.9.6",
-    "expose-loader": "^0.7.5",
-    "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "function-bind": "^1.1.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "inject-loader": "^4.0.1",
-    "jsdoc": "^3.5.5",
-    "karma": "^2.0.5",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.2",
-    "karma-junit-reporter": "^1.2.0",
-    "karma-mocha": "^1.3.0",
-    "karma-sinon-chai": "^2.0.2",
-    "karma-sourcemap-loader": "^0.3.7",
+    "connect-history-api-fallback": "1.5.0",
+    "copy-webpack-plugin": "4.5.2",
+    "cross-env": "5.2.0",
+    "cross-spawn": "6.0.5",
+    "css-loader": "1.0.0",
+    "docdash": "0.4.0",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb-base": "13.0.0",
+    "eslint-friendly-formatter": "4.0.1",
+    "eslint-import-resolver-webpack": "0.10.1",
+    "eslint-loader": "2.1.0",
+    "eslint-plugin-html": "4.0.5",
+    "eslint-plugin-import": "2.13.0",
+    "eslint-plugin-promise": "3.8.0",
+    "eventsource-polyfill": "0.9.6",
+    "expose-loader": "0.7.5",
+    "express": "4.16.3",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.11",
+    "friendly-errors-webpack-plugin": "1.7.0",
+    "function-bind": "1.1.1",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "inject-loader": "4.0.1",
+    "jsdoc": "3.5.5",
+    "karma": "2.0.5",
+    "karma-chai": "0.1.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage": "1.1.2",
+    "karma-junit-reporter": "1.2.0",
+    "karma-mocha": "1.3.0",
+    "karma-sinon-chai": "2.0.2",
+    "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^3.0.0",
-    "launch-editor-middleware": "^2.2.1",
-    "less": "^3.8.0",
-    "less-loader": "^4.1.0",
-    "lolex": "^2.7.1",
-    "mini-css-extract-plugin": "^0.4.1",
-    "mkdirp": "^0.5.1",
-    "mocha": "^5.2.0",
-    "nightwatch": "^0.9.21",
-    "nsp": "^3.2.1",
-    "opn": "^5.3.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "prismjs": "^1.15.0",
-    "rimraf": "^2.6.2",
-    "selenium-server": "^3.14.0",
-    "semver": "^5.5.0",
-    "sinon": "^6.1.4",
-    "sinon-chai": "^3.2.0",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "url-loader": "^1.0.1",
-    "vue-loader": "^15.2.6",
-    "vue-style-loader": "^4.1.1",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.16.5",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.3",
-    "webpack-merge": "^4.1.4"
+    "karma-webpack": "3.0.0",
+    "launch-editor-middleware": "2.2.1",
+    "less": "3.8.0",
+    "less-loader": "4.1.0",
+    "lolex": "2.7.1",
+    "mini-css-extract-plugin": "0.4.1",
+    "mkdirp": "0.5.1",
+    "mocha": "5.2.0",
+    "nightwatch": "0.9.21",
+    "nsp": "3.2.1",
+    "opn": "5.3.0",
+    "optimize-css-assets-webpack-plugin": "5.0.0",
+    "prismjs": "1.15.0",
+    "rimraf": "2.6.2",
+    "selenium-server": "3.14.0",
+    "semver": "5.5.0",
+    "sinon": "6.1.4",
+    "sinon-chai": "3.2.0",
+    "uglifyjs-webpack-plugin": "1.2.7",
+    "url-loader": "1.0.1",
+    "vue-loader": "15.2.6",
+    "vue-style-loader": "4.1.1",
+    "vue-template-compiler": "2.5.17",
+    "webpack": "4.16.5",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-dev-middleware": "3.1.3",
+    "webpack-hot-middleware": "2.22.3",
+    "webpack-merge": "4.1.4"
   },
   "engines": {
     "node": ">= 9.3.0",
