--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -18,9 +18,8 @@
     "build": "node build/build.js",
     "unit": "karma start test/unit/karma.conf.js --single-run",
     "unit-watch": "karma start test/unit/karma.conf.js --auto-watch",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "test": "npm run unit",
+    "lint": "eslint --ext .js,.vue src test/unit/specs",
     "security-check": "./node_modules/.bin/nsp check",
     "generate-api-docs": "./node_modules/.bin/jsdoc src -r -c jsdoc.config.js"
   },
@@ -52,7 +51,6 @@
     "chai": "4.1.2",
     "chai-shallow-deep-equal": "1.4.6",
     "chalk": "2.4.1",
-    "chromedriver": "2.41.0",
     "connect-history-api-fallback": "1.5.0",
     "copy-webpack-plugin": "4.5.2",
     "cross-env": "5.2.0",
@@ -95,13 +93,11 @@
     "mini-css-extract-plugin": "0.4.1",
     "mkdirp": "0.5.1",
     "mocha": "5.2.0",
-    "nightwatch": "0.9.21",
     "nsp": "3.2.1",
     "opn": "5.3.0",
     "optimize-css-assets-webpack-plugin": "5.0.0",
     "prismjs": "1.15.0",
     "rimraf": "2.6.2",
-    "selenium-server": "3.14.0",
     "semver": "5.5.0",
     "sinon": "6.1.4",
     "sinon-chai": "3.2.0",
