--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -36,7 +36,8 @@
     "vanilla-picker": "2.7.0",
     "vue": "2.5.21",
     "vue-i18n": "8.6.0",
-    "vue-router": "3.0.2"
+    "vue-router": "3.0.2",
+    "flatpickr": "4.5.2"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
