--- a/Resources/nuxt-component-library/package.json
+++ b/Resources/nuxt-component-library/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "nuxt",
-    "genenpmrate": "nuxt generate",
+    "generate": "nuxt generate",
     "debug": "node --inspect node_modules/.bin/nuxt"
   },
   "author": "klarstil",
@@ -17,7 +17,7 @@
     "html-loader": "^0.5.5",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "nuxt": "^1.4.2",
+    "nuxt": "^2.3.2",
     "pretty": "^2.0.0",
     "prismjs": "^1.15.0",
     "twig": "^1.12.0",
