--- a/Resources/nuxt-component-library/package.json
+++ b/Resources/nuxt-component-library/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "nuxt-component-library",
   "version": "1.0.0",
   "description": "",
@@ -11,20 +12,19 @@
   "author": "klarstil",
   "license": "MIT",
   "dependencies": {
-    "docblock-parser": "^1.0.0",
-    "esprima": "^4.0.1",
-    "glob": "^7.1.3",
-    "html-loader": "^0.5.5",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "nuxt": "^2.3.2",
-    "pretty": "^2.0.0",
-    "prismjs": "^1.15.0",
-    "twig": "^1.12.0",
-    "twing": "^1.2.5",
-    "vue-codemirror": "^4.0.5",
-    "vue-faq-accordion": "^1.2.0",
-    "vue-i18n": "^8.1.0",
-    "vue-prism-component": "^1.0.1"
+    "docblock-parser": "1.0.0",
+    "esprima": "4.0.1",
+    "glob": "7.1.3",
+    "html-loader": "0.5.5",
+    "less": "3.8.1",
+    "less-loader": "4.1.0",
+    "nuxt": "2.3.2",
+    "pretty": "2.0.0",
+    "prismjs": "1.15.0",
+    "twig": "1.12.0",
+    "vue-codemirror": "4.0.5",
+    "vue-faq-accordion": "1.2.0",
+    "vue-i18n": "8.1.0",
+    "vue-prism-component": "1.0.1"
   }
 }
