--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -24,54 +24,63 @@
     "generate-api-docs": "./node_modules/.bin/jsdoc src -r -c jsdoc.config.js"
   },
   "dependencies": {
+    "@babel/runtime": "^7.2.0",
     "app-module-path": "2.2.0",
     "axios": "0.18.0",
     "bottlejs": "1.7.1",
-    "lodash": "4.17.10",
+    "lodash": "4.17.11",
     "md5-es": "^1.8.2",
     "quill": "1.3.6",
     "twig": "1.12.0",
     "uuid": "3.3.2",
-    "vue": "2.5.17",
-    "vue-i18n": "8.0.0",
-    "vue-router": "3.0.1"
+    "vue": "2.5.21",
+    "vue-i18n": "8.6.0",
+    "vue-router": "3.0.2"
   },
   "devDependencies": {
-    "ajv": "6.5.2",
-    "autoprefixer": "9.1.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "ajv": "6.6.2",
+    "autoprefixer": "9.4.3",
     "axios-mock-adapter": "1.15.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "8.2.6",
-    "babel-loader": "7.1.5",
-    "babel-plugin-istanbul": "4.1.6",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-stage-2": "6.24.1",
-    "babel-register": "6.26.0",
-    "browserslist": "4.0.1",
-    "chai": "4.1.2",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.4",
+    "babel-plugin-istanbul": "5.1.0",
+    "browserslist": "4.3.7",
+    "chai": "4.2.0",
     "chai-shallow-deep-equal": "1.4.6",
     "chalk": "2.4.1",
     "connect-history-api-fallback": "1.5.0",
-    "copy-webpack-plugin": "4.5.2",
+    "copy-webpack-plugin": "4.6.0",
     "cross-env": "5.2.0",
     "cross-spawn": "6.0.5",
-    "css-loader": "1.0.0",
-    "docdash": "0.4.0",
-    "dotenv": "6.1.0",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb-base": "13.0.0",
+    "css-loader": "2.1.0",
+    "docdash": "1.0.1",
+    "dotenv": "6.2.0",
+    "eslint": "5.11.1",
+    "eslint-config-airbnb-base": "13.1.0",
     "eslint-friendly-formatter": "4.0.1",
     "eslint-import-resolver-webpack": "0.10.1",
-    "eslint-loader": "2.1.0",
-    "eslint-plugin-html": "4.0.5",
-    "eslint-plugin-import": "2.13.0",
-    "eslint-plugin-promise": "3.8.0",
+    "eslint-loader": "2.1.1",
+    "eslint-plugin-html": "5.0.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-promise": "4.0.1",
     "eventsource-polyfill": "0.9.6",
     "expose-loader": "0.7.5",
-    "express": "4.16.3",
+    "express": "4.16.4",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.11",
+    "file-loader": "3.0.1",
     "friendly-errors-webpack-plugin": "1.7.0",
     "function-bind": "1.1.1",
     "html-loader": "0.5.5",
@@ -79,7 +88,7 @@
     "http-proxy-middleware": "0.19.1",
     "inject-loader": "4.0.1",
     "jsdoc": "3.5.5",
-    "karma": "2.0.5",
+    "karma": "3.1.4",
     "karma-chai": "0.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.2",
@@ -88,35 +97,35 @@
     "karma-sinon-chai": "2.0.2",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "3.0.0",
+    "karma-webpack": "3.0.5",
     "launch-editor-middleware": "2.2.1",
-    "less": "3.8.0",
+    "less": "3.9.0",
     "less-loader": "4.1.0",
-    "lolex": "2.7.1",
-    "mini-css-extract-plugin": "0.4.1",
+    "lolex": "3.0.0",
+    "mini-css-extract-plugin": "0.5.0",
     "mkdirp": "0.5.1",
     "mocha": "5.2.0",
     "nsp": "3.2.1",
-    "opn": "5.3.0",
-    "optimize-css-assets-webpack-plugin": "5.0.0",
+    "opn": "5.4.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
     "prismjs": "1.15.0",
     "rimraf": "2.6.2",
-    "semver": "5.5.0",
-    "sinon": "6.1.4",
-    "sinon-chai": "3.2.0",
-    "uglifyjs-webpack-plugin": "1.2.7",
-    "url-loader": "1.0.1",
-    "vue-loader": "15.2.6",
-    "vue-style-loader": "4.1.1",
-    "vue-template-compiler": "2.5.17",
-    "webpack": "4.16.5",
-    "webpack-bundle-analyzer": "2.13.1",
-    "webpack-dev-middleware": "3.1.3",
-    "webpack-hot-middleware": "2.22.3",
-    "webpack-merge": "4.1.4"
+    "semver": "5.6.0",
+    "sinon": "7.2.2",
+    "sinon-chai": "3.3.0",
+    "terser-webpack-plugin": "^1.2.1",
+    "url-loader": "1.1.2",
+    "vue-loader": "15.4.2",
+    "vue-style-loader": "4.1.2",
+    "vue-template-compiler": "2.5.21",
+    "webpack": "4.28.3",
+    "webpack-bundle-analyzer": "3.0.3",
+    "webpack-dev-middleware": "3.4.0",
+    "webpack-hot-middleware": "2.24.3",
+    "webpack-merge": "4.1.5"
   },
   "engines": {
-    "node": ">= 8.10.0",
+    "node": "^6.14.0 || ^8.10.0 || >=9.10.0",
     "npm": ">= 3.5.2"
   },
   "browserslist": [
