--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -24,12 +24,12 @@
     "generate-api-docs": "./node_modules/.bin/jsdoc src -r -c jsdoc.config.js"
   },
   "dependencies": {
-    "@babel/runtime": "^7.2.0",
+    "@babel/runtime": "7.2.0",
     "app-module-path": "2.2.0",
     "axios": "0.18.0",
     "bottlejs": "1.7.1",
     "lodash": "4.17.11",
-    "md5-es": "^1.8.2",
+    "md5-es": "1.8.2",
     "quill": "1.3.6",
     "twig": "1.12.0",
     "uuid": "3.3.2",
@@ -38,19 +38,19 @@
     "vue-router": "3.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-decorators": "7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "7.0.0",
+    "@babel/plugin-proposal-function-sent": "7.0.0",
+    "@babel/plugin-proposal-json-strings": "7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-syntax-import-meta": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/register": "7.0.0",
     "ajv": "6.6.2",
     "autoprefixer": "9.4.3",
     "axios-mock-adapter": "1.15.0",
@@ -113,7 +113,7 @@
     "semver": "5.6.0",
     "sinon": "7.2.2",
     "sinon-chai": "3.3.0",
-    "terser-webpack-plugin": "^1.2.1",
+    "terser-webpack-plugin": "1.2.1",
     "url-loader": "1.1.2",
     "vue-loader": "15.4.2",
     "vue-style-loader": "4.1.2",
@@ -125,7 +125,7 @@
     "webpack-merge": "4.1.5"
   },
   "engines": {
-    "node": "^6.14.0 || ^8.10.0 || >=9.10.0",
+    "node": "6.14.0 || 8.10.0 || >=9.10.0",
     "npm": ">= 3.5.2"
   },
   "browserslist": [
