--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -33,9 +33,10 @@
     "quill": "1.3.6",
     "twig": "1.12.0",
     "uuid": "3.3.2",
-    "vue": "2.5.21",
-    "vue-i18n": "8.6.0",
-    "vue-router": "3.0.2"
+    "vanilla-picker": "2.7.0",
+    "vue": "2.5.17",
+    "vue-i18n": "8.0.0",
+    "vue-router": "3.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
