--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -76,6 +76,7 @@
     "function-bind": "1.1.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
+    "http-proxy-middleware": "0.19.1",
     "inject-loader": "4.0.1",
     "jsdoc": "3.5.5",
     "karma": "2.0.5",
