--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -127,7 +127,7 @@
         "webpack-merge": "4.1.5"
     },
     "engines": {
-        "node": "6.14.0 || 8.10.0 || >=9.10.0",
+        "node": ">=6.14.0 || >=8.10.0 || >=9.10.0",
         "npm": ">= 3.5.2"
     },
     "browserslist": [
