--- a/Resources/e2e/.babelrc
+++ b/Resources/e2e/.babelrc
@@ -1,4 +1,5 @@
 {
+
   "presets": [
     [
       "env",
@@ -10,6 +11,7 @@
     ]
   ],
   "plugins": [
-    "add-module-exports"
+    "add-module-exports",
+    "babel-plugin-transform-object-rest-spread"
   ]
 }
