--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -37,7 +37,8 @@
         "vue": "2.5.21",
         "vue-i18n": "8.6.0",
         "vue-router": "3.0.2",
-        "flatpickr": "4.5.2"
+        "flatpickr": "4.5.2",
+        "worker-loader": "2.0.0"
     },
     "devDependencies": {
         "@babel/core": "7.0.0",
