--- a/Resources/e2e/package.json
+++ b/Resources/e2e/package.json
@@ -20,7 +20,9 @@
         "chromedriver": "2.45.0",
         "cross-env": "5.2.0",
         "eslint": "5.11.1",
+        "eslint-config-airbnb-base": "^13.1.0",
         "eslint-config-standard": "12.0.0",
+        "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-node": "8.0.0",
         "eslint-plugin-standard": "4.0.0",
         "lodash": "4.17.11",
