--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -18,7 +18,7 @@
         "build": "node build/build.js",
         "unit": "karma start test/unit/karma.conf.js --single-run",
         "unit-watch": "karma start test/unit/karma.conf.js --auto-watch",
-        "test": "npm run unit",
+        "test": "jest --config jest.config.js",
         "lint": "eslint --ext .js,.vue src test/unit/specs",
         "security-check": "./node_modules/.bin/nsp check",
         "generate-api-docs": "./node_modules/.bin/jsdoc src -r -c jsdoc.config.js"
@@ -60,8 +60,10 @@
         "autoprefixer": "9.4.3",
         "axios-mock-adapter": "1.15.0",
         "babel-eslint": "10.0.1",
+        "babel-jest": "^24.5.0",
         "babel-loader": "8.0.4",
         "babel-plugin-istanbul": "5.1.0",
+        "babel-plugin-module-resolver": "^3.2.0",
         "browserslist": "4.3.7",
         "chai": "4.2.0",
         "chai-shallow-deep-equal": "1.4.6",
@@ -90,6 +92,7 @@
         "html-webpack-plugin": "3.2.0",
         "http-proxy-middleware": "0.19.1",
         "inject-loader": "4.0.1",
+        "jest": "^24.5.0",
         "jsdoc": "3.5.5",
         "karma": "4.0.1",
         "karma-chai": "0.1.0",
