--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -31,20 +31,19 @@
         "app-module-path": "2.2.0",
         "axios": "0.18.0",
         "bottlejs": "1.7.2",
+        "eslint-friendly-formatter": "4.0.1",
         "flatpickr": "4.5.2",
         "lodash": "4.17.11",
         "md5-es": "1.8.2",
         "npm-check-updates": "3.1.3",
-        "quill": "1.3.6",
         "twig": "1.13.2",
         "uuid": "3.3.2",
         "vanilla-picker": "2.7.2",
         "vue": "2.6.10",
         "vue-i18n": "8.10.0",
         "vue-router": "3.0.2",
-        "worker-loader": "2.0.0",
         "vue-template-compiler": "2.6.10",
-        "eslint-friendly-formatter": "4.0.1"
+        "worker-loader": "2.0.0"
     },
     "devDependencies": {
         "@babel/core": "7.4.0",
