--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -44,6 +44,7 @@
         "vue-router": "3.0.2",
         "vue-meta": "1.6.0",
         "vue-template-compiler": "2.6.10",
+        "vuex": "^3.1.0",
         "worker-loader": "2.0.0"
     },
     "devDependencies": {
