--- a/Resources/administration/package.json
+++ b/Resources/administration/package.json
@@ -31,6 +31,7 @@
         "app-module-path": "2.2.0",
         "axios": "0.18.0",
         "bottlejs": "1.7.2",
+        "dompurify": "1.0.10",
         "eslint-friendly-formatter": "4.0.1",
         "flatpickr": "4.5.2",
         "lodash": "4.17.11",
@@ -41,8 +42,8 @@
         "vanilla-picker": "2.7.2",
         "vue": "2.6.10",
         "vue-i18n": "8.10.0",
-        "vue-router": "3.0.2",
         "vue-meta": "1.6.0",
+        "vue-router": "3.0.2",
         "vue-template-compiler": "2.6.10",
         "vuex": "^3.1.0",
         "worker-loader": "2.0.0"
